--- a/techNew/css/style.css
+++ b/techNew/css/style.css
@@ -79,6 +79,7 @@ h2 {
 
     font-size: 24px;
     margin-top: 10px;
+    position: absolute;
 }
 
 
@@ -86,7 +87,32 @@ h2 {
 .news h1 {
     padding-left: 14px;
     font-size: 18px;
+    position: absolute;
 }
+
+
+.news-article{
+  width: 540px;
+  height: 345px;
+  display: inline-block;
+  background-color: #ffffff;
+}
+.news-article img, .news-article-text {
+  width: 400px;
+  height: 280px;
+  display: inline-block;
+  vertical-align: text-top;
+}
+.news-text {
+  width: 400px;
+  height: 280px;
+  position: absolute;
+  display: inline-block;
+vertical-align: text-center;
+
+}
+
+
 #video {
   /* background: #363d98; */
 }
